WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197346
[GTK] Mouse pointer no longer hidden during fullscreen video playback
https://bugs.webkit.org/show_bug.cgi?id=197346
Summary
[GTK] Mouse pointer no longer hidden during fullscreen video playback
Michael Catanzaro
Reported
2019-04-27 15:13:58 PDT
The mouse pointer is supposed to be hidden after a few seconds of fullscreen video playback when it is not being moved around. This is no longer working properly.
Attachments
Patch
(3.10 KB, patch)
2020-02-07 09:35 PST
,
Enrique Ocaña
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2019-06-24 11:43:45 PDT
Strangely, the pointer actually does disappear, but only when moved to the edge of the screen. I'm not sure why that happens, but it's not enough. This is a recent-ish regression. I'm pretty sure it worked last year.
Enrique Ocaña
Comment 2
2020-02-07 09:35:13 PST
Created
attachment 390090
[details]
Patch
EWS Watchlist
Comment 3
2020-02-07 09:36:27 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Michael Catanzaro
Comment 4
2020-02-07 11:31:36 PST
Comment on
attachment 390090
[details]
Patch My hero!
WebKit Commit Bot
Comment 5
2020-02-10 02:13:45 PST
Comment on
attachment 390090
[details]
Patch Clearing flags on attachment: 390090 Committed
r256113
: <
https://trac.webkit.org/changeset/256113
>
WebKit Commit Bot
Comment 6
2020-02-10 02:13:47 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-02-10 02:14:17 PST
<
rdar://problem/59305111
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug