[GTK] Mouse pointer no longer hidden during fullscreen video playback https://bugs.webkit.org/show_bug.cgi?id=197346

Reviewed by Adrian Perez de Castro.

.:

Enabled the CURSOR_VISIBILITY feature on the GTK port.

* Source/cmake/OptionsGTK.cmake:

Source/WebKit:

Covered by existing tests.

* UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::setCursorHiddenUntilMouseMoves): Added implementation.


Canonical link: https://commits.webkit.org/220449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256113 268f45cc-cd09-0410-ab3c-d52691b4dbfc